@@ -77,8 +77,8 @@ public abstract class BootConfig implements JExpressConfig {
     protected static String BR = System.lineSeparator();
     protected static final String DEFAULT_DEC_VALUE = "=DEC(changeit)" + BR;
 
-    protected static final String DESC_KMF = "Path to key store file. Use SSL/TLS when keystore is provided, otherwise use plain socket";
-    protected static final String DESC_TMF = "Path to trust store file. Auth the remote peer certificate when a truststore is provided, otherwise blindly trust all remote peer certificate";
+    protected static final String DESC_KMF = "Path to key store file. Use JDK default keystore when not specified";
+    protected static final String DESC_TMF = "Path to trust store file. Use JDK default truststore when not specified";
     public static final String DESC_PLAINPWD = "plain text inside DEC() will be automatically encrypted by app root password when the application starts or is running";
     protected static final String FILENAME_KEYSTORE = "keystore.p12";
     protected static final String FILENAME_SRC_TRUSTSTORE = "truststore.p12";
