@@ -5,6 +5,11 @@
 
   * Fixed all GitHub Codacy Security Scan reported issues.
 
+  * Improved security - configuration behavior changed: HttpClientConfig, GRPCClientConfig, MqttClientConfig and AuthConfig (cfg_aut.properties)
+    1. Use plaintext no SSL/TLS if TLS protocol is configured as blank or empty string.
+    2. Use JDK default keystore if keystore not specified.
+    3. Use JDK default truststore if truststore not specified.
+
   * Enhanced security: Replaced `secpr5121` with `secp256r1` for default `ECGenParameterSpec`.
 
   * Enhanced security: Use of a cryptographic algorithm with insufficient key size - Threw `InvalidAlgorithmParameterException` when using a cryptographic algorithm with insufficient key size to call `EncryptorUtil.generateKeyPair()`.
